@@ -40,18 +40,19 @@ public class InsertRandomSpeedTest {
         input.close();
     }
 
-    /** Returns time needed to put N random strings of length L into the
-      * Map61B 61bMap. */
     public static double insertRandom(Map61B<String, Integer> map61B, int N, int L) {
         Stopwatch sw = new Stopwatch();
         String s = "cat";
         for (int i = 0; i < N; i++) {
             s = StringUtils.randomString(L);
-            map61B.put(s, new Integer(i));
+            map61B.put(s, Integer.valueOf(i));
         }
         return sw.elapsedTime();
     }
 
+
+    /** Returns time needed to put N random strings of length L into the
+      * Map61B 61bMap. */
     /** Returns time needed to put N random strings of length L into the
       * TreeMap treeMap. */
     public static double insertRandom(TreeMap<String, Integer> treeMap, int N, int L) {
@@ -59,7 +60,7 @@ public class InsertRandomSpeedTest {
         String s = "cat";
         for (int i = 0; i < N; i++) {
             s = StringUtils.randomString(L);
-            treeMap.put(s, new Integer(i));
+            treeMap.put(s, Integer.valueOf(i));
         }
         return sw.elapsedTime();
     }
@@ -71,7 +72,7 @@ public class InsertRandomSpeedTest {
         String s = "cat";
         for (int i = 0; i < N; i++) {
             s = StringUtils.randomString(L);
-            treeMap.put(s, new Integer(i));
+            treeMap.put(s, Integer.valueOf(i));
         }
         return sw.elapsedTime();
     }
